@@ -1,38 +1,0 @@
-;; -*- coding: utf-8; mode: kahua -*-
-;;
-;;  Copyright (c) 2005 Kahua.Org, All rights reserved.
-;;  See COPYING for terms and conditions of using this software
-;;
-;; $Id:$
-;;
-
-(load "%%_PROJECT_NAME_%%/version.kahua")
-
-(define page-template
-  (kahua:make-xml-template
-   (kahua-template-path "%%_PROJECT_NAME_%%/page.xml")))
-
-(define-entry (version)
-  (kahua:xml-template->sxml
-   page-template
-   :title (title/ (@/ (id "title"))
-		 "%%_PROJECT_NAME_%%")
-   :body (div/ (@/ (id "body"))
-	       (h1/ (format "%%_PROJECT_NAME_%%: version ~a"
-			    *%%_PROJECT_NAME_%%-version*))
-	       (a/cont/ (@@/ (cont greeting))
-			"greeting"))))
-
-(define-entry (greeting)
-  (kahua:xml-template->sxml
-   page-template
-   :body (div/ (@/ (id "body"))
-	       (h1/ "Hello, Kahua!")
-	       (a/cont/ (@@/ (cont version))
-			"version"))))
-
-;
-; initialization
-;
-   
-(initialize-main-proc greeting)
